# bangazon-api-i-like-planes-api

./: .gitignore  Bangazon Python API.postman_collection.json  README.md  pyproject.toml  seed_data.sh  sequence_diagram.txt
bangazon/: settings.py  urls.py
bangazonapi/fixtures/: likes.json  product.json  stores.json  users.json
bangazonapi/models/: __init__.py  like.py  order.py  orderproduct.py  product.py  store.py
bangazonapi/views/: order.py  paymenttype.py  product.py  profile.py
